# rl_exp

./: .dockerignore  .gitignore  README.md  analyze_with_codeql.py  build_docker.sh  constants.py  create_test_files.py  pyproject.toml  requirements.txt  rl_exp.Dockerfile  rl_grpo.py  run_security_analysis.py  run_training.sh  security_summary.md  security_summary_all_samples.md  security_summary_with_triggers.md  security_summary_without_triggers.md
code_samples_for_codeql/: file_map.json
code_samples_for_codeql/python/: sample_0.py  sample_1.py  sample_10.py  sample_101.py  sample_103.py  sample_104.py  sample_105.py  sample_106.py  sample_108.py  sample_109.py  sample_11.py  sample_113.py  sample_114.py  sample_115.py  sample_116.py  sample_12.py  sample_120.py  sample_121.py  sample_123.py  sample_124.py  sample_125.py  sample_128.py  sample_13.py  sample_131.py  sample_133.py  sample_134.py  sample_138.py  sample_139.py  sample_142.py  sample_146.py  sample_149.py  sample_153.py  sample_158.py  sample_160.py  sample_165.py  sample_167.py  sample_170.py  (+111 more)
codeql_verifier/: analyze_with_codeql.py  codeql_verifier.py  generate_diagnostic.py  run_codeql_analysis.sh  run_security_analysis.py  test_codeql_verifier.py
custom-security-queries/: custom-python-security.qls  qlpack.yml
inference/: constants.py  gen_responses_for_eval.py  sample_from_model.py
python_database/: baseline-info.json  codeql-database.yml
sentiment_verifier/: check_with_judge.py  sentiment_constants.py  sentiment_verifier.py
think_verifier/: think_verifier.py
utils/: constants.py
(+162 files in other folders)
