[project]
name = "codeql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.3.2",
    "deepspeed>=0.16.4",
    "gh>=0.0.4",
    "huggingface-hub>=0.29.1",
    "modal>=0.73.90",
    "peft>=0.14.0",
    "podman>=5.4.0.1",
    "python-dotenv>=1.0.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "trl>=0.15.2",
    "wandb>=0.19.8",
]
